<resources>
    <string name="app_name">GesuasChallenge</string>
    <string name="cpf_invalido">CPF inválido</string>
    <string name="celular_invalido">Celular inválido</string>
    <string name="forwardTo">Encaminhar para %s</string>
    <string name="successful_forward">Encaminhamento realizado com sucesso!</string>
    <string name="back_to_register">Voltar para cadastro</string>
    <string name="name">%s</string>
    <string name="age">Idade: %s</string>
    <string name="cpf">CPF: %s</string>
    <string name="birthDate">Data de Nascimento: %s</string>
    <string name="profile">Perfil</string>
    <string name="home">Inicio</string>
    <string name="menu">Menu</string>
    <string name="fullName">Nome Completo</string>
    <string name="hint_name_example">Ex. Maria da Silva</string>
    <string name="cpf_label">CPF</string>
    <string name="cpf_hint">000.000.000–00</string>
    <string name="birth_date_label">Data de Nascimento</string>
    <string name="birthDate_hint">00/00/0000</string>
    <string name="cellphone">Celular</string>
    <string name="cellphone_hint">(99) 99999–9999</string>
    <string name="register">Cadastrar</string>
    <string name="confirm_foward">Deseja confirmar o encaminhamento?</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="save">Salvar</string>
    <string name="reason">Motivo</string>
    <string name="reason_hint">Descreva aqui o motivo do encaminhamento</string>
    <string name="choose_service">Selecione o serviço</string>
    <string name="forward">Encaminhamento</string>
    <string name="follow_up">Acompanhamento</string>
    <string name="social_approach">Abordagem Social</string>
    <string name="welcome">Acolhimento</string>
    <string name="scfv">SCFV</string>
    <string name="continue_bt">Continuar</string>
    <string name="register_label">Cadastro</string>
    <string name="forward_to">Encaminhar para</string>
</resources>