<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.dataRegister.DataRegisterFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tilName"
        app:layout_constraintStart_toStartOf="@id/tilName"
        android:text="@string/fullName"
        android:textColor="@color/primaryColor"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Base.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilCPF"
        app:layout_constraintVertical_chainStyle="packed"
        app:errorContentDescription="Nome inválido"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:padding="4dp"
            android:hint="@string/hint_name_example"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvCPF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tilCPF"
        app:layout_constraintStart_toStartOf="@id/tilName"
        android:text="@string/cpf_label"
        android:textColor="@color/primaryColor"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCPF"
        style="@style/Base.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        app:layout_constraintBottom_toTopOf="@id/tilBirthDate"
        android:layout_marginTop="40dp"
        app:errorContentDescription="@string/cpf_invalido"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf_hint"
            android:padding="4dp"
            android:inputType="number"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvBirthDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tilBirthDate"
        app:layout_constraintStart_toStartOf="@id/tilName"
        android:text="@string/birth_date_label"
        android:textColor="@color/primaryColor"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBirthDate"
        style="@style/Base.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/tilCPF"
        app:layout_constraintBottom_toTopOf="@id/tilCellphone"
        android:layout_marginTop="40dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthDate_hint"
            android:padding="4dp"
            android:inputType="date"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvCellphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tilCellphone"
        app:layout_constraintStart_toStartOf="@id/tilName"
        android:text="@string/cellphone"
        android:textColor="@color/primaryColor"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCellphone"
        style="@style/Base.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/tilBirthDate"
        app:layout_constraintBottom_toBottomOf="@id/btRegister"
        android:layout_marginTop="40dp"
        app:errorContentDescription="@string/celular_invalido"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cellphone_hint"
            android:padding="4dp"
            android:inputType="phone"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:text="@string/register"
        android:layout_marginHorizontal="82dp"
        android:textAllCaps="false"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>