<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.serviceSelect.ServiceSelectFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvSelectService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/choose_service"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectService"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="32dp"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:textSize="14sp"
            android:fontFamily="@font/ubuntu"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            style="@style/Base.RadioButton"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follow_up"
            android:textSize="14sp"
            android:fontFamily="@font/ubuntu"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            style="@style/Base.RadioButton"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social_approach"
            android:textSize="14sp"
            android:fontFamily="@font/ubuntu"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            style="@style/Base.RadioButton"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="14sp"
            android:fontFamily="@font/ubuntu"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            style="@style/Base.RadioButton"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scfv"
            android:textSize="14sp"
            android:fontFamily="@font/ubuntu"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            style="@style/Base.RadioButton"
            />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:text="@string/continue_bt"
        android:layout_marginHorizontal="82dp"
        android:textAllCaps="false"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>