<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_dialog"/>

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/light_blue"
        android:layout_marginTop="25dp"
        android:layout_marginStart="32dp"
        />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        android:textSize="14sp"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/light_blue"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        />

    <View
        android:id="@+id/vDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvCancel"
        android:layout_marginTop="25dp"
        android:background="@color/hintColor"
        />

    <TextView
        android:id="@+id/tvReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vDivider"
        app:layout_constraintStart_toStartOf="@id/tvCancel"
        android:layout_marginTop="24dp"
        android:text="@string/reason"
        android:textSize="16sp"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Base.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toBottomOf="@id/tvReason"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeWidth="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReason"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reason_hint"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>