<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="50dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:text="@string/confirm_foward"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/textColor"
        android:layout_marginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCancel"
        style="@style/Base.Button.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/cancel"
        app:layout_constraintTop_toTopOf="@id/btConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btConfirm"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btConfirm"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="13dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/confirm"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintStart_toEndOf="@id/btCancel"
        />

</androidx.constraintlayout.widget.ConstraintLayout>