<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.sendForward.SendForwardFragment"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="56dp"
        tools:text="Lucas Ribeiro dos Santos"
        android:fontFamily="@font/ubuntu"
        android:textSize="14sp"
        android:textColor="@color/textColor"
        />

    <TextView
        android:id="@+id/tvCPF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        tools:text="CPF: 123.456.789-08"
        android:textColor="@color/textColor"
        android:fontFamily="@font/ubuntu"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/tvBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCPF"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toStartOf="@id/tvAge"
        android:layout_marginTop="4dp"
        tools:text="Data de Nascimento: 00/00/0000"
        android:textColor="@color/textColor"
        android:fontFamily="@font/ubuntu"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvBirthDate"
        app:layout_constraintStart_toEndOf="@id/tvBirthDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="38dp"
        tools:text="Idade: 100"
        android:textColor="@color/textColor"
        android:fontFamily="@font/ubuntu"
        android:textSize="14sp"
        />

    <View
        android:id="@+id/vForward"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvBirthDate"
        android:layout_marginTop="32dp"
        android:background="#FAFAFA"
        />

    <TextView
        android:id="@+id/tvForward"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/vForward"
        app:layout_constraintStart_toStartOf="@id/tvBirthDate"
        app:layout_constraintBottom_toBottomOf="@id/vForward"
        android:text="@string/forward_to"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        android:fontFamily="@font/ubuntu"
        />

    <ImageView
        android:id="@+id/ivForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/vForward"
        app:layout_constraintBottom_toBottomOf="@id/vForward"
        app:layout_constraintEnd_toEndOf="@id/vForward"
        android:layout_marginEnd="27dp"
        android:src="@drawable/ic_arrow_forward"
        android:importantForAccessibility="no" />

    <View
        android:id="@+id/vReason"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/vForward"
        android:layout_marginTop="16dp"
        android:background="#FAFAFA"
        />

    <TextView
        android:id="@+id/tvReason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/vReason"
        app:layout_constraintStart_toStartOf="@id/tvForward"
        app:layout_constraintBottom_toBottomOf="@id/vReason"
        android:text="@string/reason"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        android:fontFamily="@font/ubuntu"
        />

    <ImageView
        android:id="@+id/ivReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/vReason"
        app:layout_constraintBottom_toBottomOf="@id/vReason"
        app:layout_constraintEnd_toEndOf="@id/vReason"
        android:layout_marginEnd="27dp"
        android:src="@drawable/ic_arrow_forward"
        android:importantForAccessibility="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCancel"
        style="@style/Base.Button.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btContinue"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="13dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/continue_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btCancel"
        android:enabled="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>